--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,13 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegan Restaurant</title>
     <style>
+        @font-face {
+            font-family: Garet-Book ;
+            src: url(Garet-Book.ttf);
+        }
+        .fade-in {
+            opacity: 0;
+            animation: fadeIn 3s ease-out forwards;
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
-            color: #333;
-            transition: background 0.3s ease;
         }
 
         header {
@@ -27,7 +44,8 @@
 
         header img {
             position: absolute;
-            top: 50% left: 50%;
+            top: 50% ;
+            left: 50%;
             transform: translate(-50%, -50%);
             width: 1500px;
             height: auto;
@@ -50,8 +68,9 @@
         }
 
         .header-text {
+            font-family: Garet-Book;
             position: absolute;
-            top: 190px;
+            top: 160px;
             right: 50px;
             font-size: 1.1rem;
             color: rgb(40, 74, 50);
@@ -61,13 +80,15 @@
         }
 
         .hello-text {
+            font-family: Garet-book;
             position: absolute;
-            top: 530px;
+            top: 480px;
             left: 40px;
             color: rgb(40, 74, 50);
             font-size: 1.1rem;
             max-width: 30%;
             font-weight: light;
+            text-align: left;
         }
 
         nav {
@@ -87,6 +108,7 @@
             padding: 60px;
             text-align: center;
             color: white;
+            font-family: Garet-book;
         }
 
         .award-images {
@@ -138,7 +160,7 @@
             top: 200px;
 
             left: 120px;
-
+            font-family: Garet-book;
             color: rgb(31, 60, 31);
             font-size: 20px;
             max-width: 650px;
@@ -169,6 +191,7 @@
             border-top-left-radius: 50px;
             border-top-right-radius: 50px;
             color: white;
+            font-family: Garet-book;
         }
 
         .special-container {
@@ -203,7 +226,7 @@
             font-style: italic;
             font-size: 0.8rem;
             margin-top: 5px;
-            color: #ffdd57;
+            color: #145a20;
         }
 
         .gradient-section3 {
@@ -237,6 +260,7 @@
             line-height: 1.5;
             font-weight: lighter;
             text-align: right;
+            font-family: Garet-book;
         }
 
         .text-box3::after {
@@ -263,8 +287,72 @@
             height: auto;
         }
 
-        #contact {
-            background-color: #c8e6c9;
+        #cater {
+            text-align: center;
+            padding: 50px;
+            background-color: #29542d;
+            border-top-left-radius: 50px;
+            border-top-right-radius: 50px;
+            color: white;
+            font-family: Garet-book;
+        }
+
+        .gradient-section4 {
+            background: url('gradient.png') no-repeat center center/cover;
+            height: 400px;
+            position: relative;
+
+        }
+
+        .catering-image {
+            position: absolute;
+            top: 25%;
+
+            left: 50%;
+            transform: translate(-60%, -20%);
+
+            width: auto;
+
+            height: auto;
+            max-width: 80%;
+        }
+
+        .catering-photo {
+            position: absolute;
+            top: -100px;
+            right: 50px;
+            width: auto;
+            height: auto;
+            max-width: 1300px;
+
+        }
+
+        .text-box4 {
+            position: absolute;
+            top: 200px;
+
+            left: 120px;
+
+            color: rgb(31, 60, 31);
+            font-size: 20px;
+            max-width: 650px;
+            line-height: 1.5;
+            font-weight: lighter;
+            text-align: left;
+            font-family: Garet-book;
+        }
+
+        .text-box4::before {
+            content: "";
+            position: absolute;
+            left: -50px;
+
+            top: 0;
+            width: 5px;
+
+            height: 100%;
+
+            background-color: #2d6a4f;
         }
 
         h1,
@@ -299,34 +387,73 @@
         }
 
         .navbar {
-            position: fixed;
+            position: absolute;
             top: 0;
+            /* Place it at the top of the header */
             left: 0;
             right: 0;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(44, 131, 67, 0.087);
             color: white;
-            text-align: center;
-            padding: 15px;
+            text-align: right;
+            padding: 25px;
             z-index: 1000;
+            /* This ensures the navbar is on top of the background */
             backdrop-filter: blur(5px);
             transition: backdrop-filter 0.3s ease;
         }
 
+
+        .navbar .logo {
+            position: absolute;
+            left: 20px;
+            /* Adjust as needed */
+            top: 45%;
+            transform: translateY(-50%);
+
+            /* Centers the logo vertically */
+            height: 80px;
+            /* Adjust the height as needed */
+        }
+
+        .navbar.sticky {
+            position: fixed;
+            top: 20px;
+            padding-top: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
+            left: 20px;
+            right: 20px;
+            background-color: rgba(198, 198, 198, 0.56);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            padding: 10px 40x;
+            /* Reduced padding for the floating effect */
+            border-radius: 25px;
+            /* Rounded corners */
+            transition: background-color 0.3s ease, padding 0.3s ease, border-radius 0.3s ease, box-shadow 0.3s ease;
+        }
+
         .navbar a {
-            color: white;
+            color: rgb(34, 111, 44);
             text-decoration: none;
             padding: 10px 20px;
-            font-size: 18px;
+            font-family: Garet-book;
+            font-size: 25px;
             margin: 0 10px;
             border-radius: 4px;
+            transition: background-color 0.3s ease;
         }
 
         .navbar a:hover {
-            background-color: #2e7d32;
+            background-color: #d1dad2;
         }
+
 
         section {
             transition: filter 0.3s ease;
+        }
+
+        html {
+            scroll-behavior: smooth;
         }
     </style>
 </head>
@@ -334,25 +461,27 @@
 <body>
 
     <div class="navbar">
+        <img src="vinevegan.png" alt="Vine Vegan Logo" class="logo">
         <a href="#about">About</a>
         <a href="#menu">Menu</a>
+        <a href="#cater">Catering</a>
         <a href="#contact">Contact</a>
     </div>
 
     <header>
-        <img src="cobb-salad.png" alt="Cobb Salad">
-        <img src="dailyfresh.png" alt="Daily Fresh">
-        <img src="rightlines.png" alt="Daily Fresh">
-        <div class="header-text">
-            <p>Vine Vegan is proud to be part of the growing awareness that plant-based eating is key to health,
+        <img src="cobb-salad.png" alt="Cobb Salad" class="fade-in">
+        <img src="dailyfresh.png" alt="Daily Fresh" class="fade-in">
+        <img src="rightlines.png" alt="Daily Fresh" class="fade-in">
+        <div class="header-text" class="fade-in">
+            <p class="fade-in">Vine Vegan is proud to be part of the growing awareness that plant-based eating is key to health,
                 physical
                 and mental vitality, and disease prevention.
             </p>
         </div>
-        <div class="hello-text">Vine Vegan is proud to be part of the growing awareness that plant-based eating is key
+        <div class="hello-text"> <p class="fade-in">Vine Vegan is proud to be part of the growing awareness that plant-based eating is key
             to health,
             physical
-            and mental vitality, and disease prevention.</div>
+            and mental vitality, and disease prevention. </p></div>
     </header>
 
     <section id="about">
@@ -424,14 +553,40 @@
     </section>
 
 
-    <section id="contact">
-        <h2>Contact Us</h2>
+    <section id="cater">
+        <h2>Make Your Next Event Unforgettable with Vine Vegan’s Catering Options</h2>
 
     </section>
 
-    <section id="catering">
-        <h2>Catering</h2>
-        <p>We offer personalized catering services for your special events. From weddings to corporate gatherings, we ensure every dish is a hit. Contact us to plan your next event!</p>
+    <section class="gradient-section4">
+        <section id="catering">
+            <img src="cateringtext.png" alt="Catering Text" class="catering-image">
+            <img src="cateringphoto.png" alt="Catering Photo" class="catering-photo">
+            <p class="text-box4"> We’d love to hear about your next event and how Vine Vegan might help with your
+                catering needs! To get started, please submit your information on the form below. We can put together a
+                catering package for your needs. From sandwich platters to weddings, we can help! Please allow 24 hours
+                for a response.</p>
+        </section>
+
+
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: eat@vinevegan.com</p>
+        <p>Call: 813-939-8463</p>
+        <p>Directions: 2080 Badlands Dr., Brandon, FL 33511</p>
+    </section>
+
+    <section id="Copyright">
+        <h1> Copyright</h1>
+        <h2>Images</h2>
+        <p>All images used in this website are sourced from Vine Vegan. All rights to these images belong to their respective owners.</p>
+        <h2>Fonts</h2>
+        <p>The font Garet used in this website is sourced from DaFont. Please refer to the font license on DaFont for usage rights.
+        </p>
+        <h2>General Notice</h2>
+        <p> This website was created for educational purposes as part of the TSA Webmaster competition. All copyrighted materials remain the property of their respective owners.</p>
     </section>
 
 
@@ -443,6 +598,19 @@
                 document.body.classList.add('scrolled');
             } else {
                 document.body.classList.remove('scrolled');
+            }
+        });
+    </script>
+    <script>
+        window.addEventListener('scroll', function () {
+            const navbar = document.querySelector('.navbar');
+            const firstSection = document.querySelector('section');
+            const sectionHeight = firstSection.offsetHeight;
+
+            if (window.scrollY > sectionHeight) {
+                navbar.classList.add('sticky');
+            } else {
+                navbar.classList.remove('sticky');
             }
         });
     </script>
